<resources>
    <string name="app_name">VR Viewer</string>
    <string name="LogIn_Screen_Email">Email</string>
    <string name="LogIn_Screen_Password">Password</string>v
    <string name="LogIn_SignUp">Sign up</string>
    <string name="title_activity_explore_post">Explore</string>
    <string name="newPost_title_hint">Title</string>
    <string name="newPost_description_hint">Description</string>
    <string name="newPost_button">Post</string>
    <string name="dialog_loading">Loading...</string>
    <string name="dialog_SignIn">SignIn new user...</string>
    <string name="dialog_Posting">Posting...</string>

    <!--Widget-->
    <string name="widget_title">VR Viewer</string>
    <string name="widget_subtitle">Latest Posts</string>

    <!--Error Messages-->
    <string name="newPost_required_data">Required</string>
    <string name="newPost_image_error">An error occurred loading image</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="play_services_fail">Google Play Services error</string>
    <string name="error_panoramic">Error loading panoramic image</string>

    <!--Admob-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--ContentDescription-->
    <string name="content_widget_image">Image Widget</string>
    <string name="content_widget_icon">Image icon</string>
    <string name="content_image_logo">Vr Viewer</string>
    <string name="content_user_avatar">user avatar</string>
    <string name="content_user_post">user post</string>
    <string name="content_post_info">detail image button</string>
    <string name="content_post_fullView">watch image on vr</string>
</resources>
