<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.byron.vrviewer.activities.NewPostActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextTitle"
        android:layout_alignStart="@+id/editTextTitle"
        android:layout_marginTop="28dp"
        android:id="@+id/editTextDescription"
        android:hint="@string/newPost_description_hint"
        android:textAlignment="viewStart"
        android:layout_centerHorizontal="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="22dp"
        android:id="@+id/editTextTitle"
        android:hint="@string/newPost_title_hint"
        android:layout_below="@+id/pano_view"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPost"
        android:text="@string/newPost_button"
        android:layout_marginTop="26dp"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_below="@+id/editTextDescription"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

</RelativeLayout>
